# sdk-on-chain

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: publish-to-crates-io.yaml
darklake-sdk/: Cargo.toml  README.md
darklake-sdk-examples/: Cargo.toml
darklake-sdk-examples/src/: main.rs
darklake-sdk/examples/: basic_usage.rs
darklake-sdk/src/: amm.rs  darklake_amm.rs  lib.rs  math.rs
darklake-sdk/src/proof/: mod.rs  proof_generator.rs  utils.rs
darklake-sdk/src/proof/circuits/: cancel.r1cs  settle.r1cs
darklake-sdk/tests/: basic_tests.rs
examples/: Cargo.toml
examples/src/: main.rs
jupiter-core/: Cargo.toml
jupiter-core/src/amms/: amm_program_id_to_labels.rs  darklake_amm.rs  mod.rs  test_harness.rs
src/: account_metas.rs  amm.rs  constants.rs  darklake_amm.rs  lib.rs  math.rs  reduced_amm_params.rs  sdk.rs  utils.rs
src/proof/: mod.rs  proof_generator.rs  utils.rs
