[workspace]
members = [
    "darklake-sdk",
    "darklake-sdk-examples"
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
anchor-lang = "0.31.1"
solana-sdk = ">=2.2"
solana-rpc-client = ">=2.2"
solana-rpc-client-api = ">=2.2"
solana-account-decoder = ">=2.2"
solana-sdk-ids = ">=2.2"
solana-system-interface = "1.0.0"
solana-transaction-status = ">=2.2"
anyhow = "1"
rust_decimal = "1.26.1"
bincode = "1.3.3"
log = "0.4.20"
borsh = "0.10"

# SPL
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "7.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "9", features = ["no-entrypoint"] }

# Dev dependencies
tokio = { version = "1", features = ["full"] }
assert_matches = "1.5.0"

[workspace.dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = ["user-hooks"]