[package]
name = "darklake-sdk-on-chain"
version = "0.3.0"
description = "Darklake DEX SDK - A standalone SDK for interacting directly with Darklake AMM pools"
edition = "2024"
authors = ["Darklake Team"]
license = "MIT"
documentation = "https://docs.rs/darklake-sdk-on-chain"
homepage = "https://github.com/darklakefi/darklake-sdk-on-chain"
repository = "https://github.com/darklakefi/darklake-sdk-on-chain.git"

[dependencies]
anchor-client = { version = "0.31.1", features = ["async"] }
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
solana-sdk = "=2.1.0"
solana-rpc-client = "2.1.0"
solana-rpc-client-api = "2.1.0"
solana-account-decoder = "2.1.0"
solana-system-interface = "2.0.0"
anyhow = "1.0.0"
rust_decimal = "1.26.1"
bincode = "1.3.3"
borsh = "1.0.0"
log = "0.4.20"
serde_json = "1.0.82"
dex-math = { git = "https://github.com/darklakefi/dex-math.git", branch = "main", version = "0.1.5" }
lazy_static = "1.5.0"

# SPL
spl-token = { version = "5.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "6.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "7.0.0", features = ["no-entrypoint"] }

# Proof
poseidon-ark = { git = "https://github.com/darklakefi/poseidon-ark.git", branch = "gateway" }
password-hash = "0.5.0"

ark-groth16 = { version = "0.5.0" }
ark-circom = "0.5.0"
ark-ec = { version = "0.5.0", default-features = false }
ark-ff = { version = "0.5", default-features = false }
ark-ff-4 = { version = "0.4", default-features = false, package = "ark-ff" }
ark-bn254 = { version = "0.5", default-features = false, features = ["curve"] }
ark-bn254-4 = { version = "0.4", default-features = false, features = [
    "curve",
], package = "ark-bn254" }
ark-serialize = { version = "0.5.0", default-features = false }
ark-std = "0.5.0"
ark-relations = { version = "0.5.1", features = ["std"] }
tokio = { version = "1", features = ["full"] }
num-bigint = "0.4"
num-traits = "0.2"
hex = "0.4"

[dev-dependencies]
assert_matches = { version = "1.5.0" }

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = ["user-hooks"]