[package]
name = "darklake-sdk"
version = "0.1.0"
description = "Darklake DEX SDK - A standalone SDK for interacting with Darklake AMM pools"
edition = { workspace = true }
authors = ["Darklake Team"]
license = "MIT"

[dependencies]
anchor-lang = { workspace = true }
solana-sdk = { workspace = true }
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-account-decoder = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-system-interface = { workspace = true }
anyhow = { workspace = true }
rust_decimal = { workspace = true }
bincode = { workspace = true }
log = { workspace = true }
serde_json = "1.0.82"

# SPL
spl-token = { workspace = true, features = ["no-entrypoint"] }
spl-associated-token-account = { workspace = true, features = ["no-entrypoint"] }
spl-token-2022 = { workspace = true, features = ["no-entrypoint"] }

# Proof
poseidon-ark = { git = "https://github.com/darklakefi/poseidon-ark.git", branch = "gateway" }
password-hash = "0.5.0"

ark-groth16 = { version = "0.5.0" }
ark-circom = "0.5.0"
ark-ec = { version = "0.5.0", default-features = false }
ark-ff = { version = "0.5", default-features = false }
ark-ff-4 = { version = "0.4", default-features = false, package = "ark-ff" }
ark-bn254 = { version = "0.5", default-features = false, features = ["curve"] }
ark-bn254-4 = { version = "0.4", default-features = false, features = [
    "curve",
], package = "ark-bn254" }
ark-serialize = { version = "0.5.0", default-features = false }
ark-std = "0.5.0"
ark-relations = { version = "0.5.1", features = ["std"] }
tokio = { workspace = true, features = ["full"] }
num-bigint = "0.4"
num-traits = "0.2"
hex = "0.4"

[dev-dependencies]
assert_matches = { workspace = true }