[package]
name = "darklake-examples"
version = "0.1.0"
description = "Examples for using the Darklake DEX SDK"
edition = { workspace = true }
authors = ["Darklake Team"]
license = "MIT"

[dependencies]
darklake-sdk = { path = "../darklake-sdk" }
solana-sdk = { workspace = true }
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-transaction-status = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
base64 = "0.21"
serde_json = "1.0"
